--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
   "rewrites": [
     { "source": "/discord", "destination": "/discord.html" },
-    { "source": "/shaders", "destination": "/shaders.html" }
+    { "source": "/shaders", "destination": "/shaders.html" },
+    { "source": "/opensource", "destination": "/opensource.html" }
   ]
 }
